--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,207 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+body, html {
+  margin: 0;
+  padding: 0;
+  border: 2px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
+}
+
+.header {
+  background: linear-gradient(to right, #003087, #0280c6, #003087);
+  color: white;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  align-items: center;
+}
+
+.header-content {
+  display: flex;
+  justify-content: center;
+}
+
+.logo {
+  margin-right: 2rem;
+  align-items: center;
+}
+
+.logo img {
+  height: 120px;
+}
+
+.title {
+  /* flex: 1; */
+  align-items: center;
+}
+
+.title h1 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.title p {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.main {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.awards {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin-bottom: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.award-item {
+  text-align: center;
+  flex-basis: 45%;
+  background-color: #f2f2f2;
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.award-item h2 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin-bottom: 2rem;
+}
+
+.stat-item {
+  text-align: center;
+  flex-basis: 45%;
+  background-color: #f2f2f2;
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.stat-item h2 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.stat-item h3 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.products {
+  width: 50%;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.products h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.product-item {
+  flex-basis: calc(33% - 10px);
+  background-color: #f2f2f2;
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1rem;
+}
+
+.product-item img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 0.5rem;
+}
+
+.product-item h3 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.third-img {
+  width: 80%;
+  height: auto;
+}
+.images {
+  display: flex;
+  justify-content: space-between;
+}
+
+.second-image {
+  width: 50%;
+  margin: 60px;
+}
+
+.first-image {
+  width: 20%;
+  height: 500px;
+  margin-right: 100px;
+  margin-top: 60px;
+}
+
+.red-line{
+  border: none;
+  border-top: 2px solid red;
+}
+.footer{
+  background-color: rgb(244, 16, 16);
+  height: 80px;
+  align-items: center;
+  text-align: center;
+}
+body > :not(header):not(footer) {
+  flex: 1;
+  background: linear-gradient(180deg, #d7f7ae, #eae8ba);
+}
+
+.conatiner {
+  display: flex;
+  align-items: center;
+}
+.container .paragraph {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.footer-content {
+  margin-top: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: whitesmoke;
+}
+.red-line{
+  width: 100%;
+  height: 2px;
+  background-color: red;
+}
+.product-list{
+  font-size: 11px;
+  padding-left:3rem;
+  font-weight: bold;
+  word-spacing: 2px;
 }
